syntax = "proto3";
package zkp_auth;

message RegisterRequest {
  string user = 1;
  int32 y1 = 2;
  int32 y2 = 3;
}

message RegisterResponse {}

message AuthenticationChallengeRequest {
    string user = 1;
    int32 r1 = 2;
    int32 r2 = 3;
}

message AuthenticationChallengeResponse {
    string auth_id = 1;
    int32 c = 2;
}

message AuthenicationAnswerRequest {
    string auth_id = 1;
    int32 s = 2;
}

message AuthenicationAnswerResponse {
    string sesion_id = 1;
}

service Auth {
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc CreateAuthenicationChallenge(AuthenticationChallengeRequest) returns (AuthenticationChallengeResponse) {}
    rpc VerifyAuthentication(AuthenicationAnswerRequest) returns (AuthenicationAnswerResponse) {}
}